# MovingObjectDetectionCv

./: CMakeLists.txt  README.md  main.cpp
src/: MovingObjectDetector.cpp  MovingObjectDetector.h
